# quickstrom

./: .buildinfo  .gitattributes  .gitignore  .psc-ide-port  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  backlog.org  cabal.project  default.nix  docker.nix  faq.html  flake.nix  foreign-todo.md  formulae.md  formulae.org  formulae.tex  genindex.html  hie.yaml  index.html  installation.html  introduction.html  mypy.ini  nixpkgs.nix  objects.inv  pyproject.toml  reference.html  running.html  search.html  searchindex.js  shell.nix  spago.dhall  test.dhall  test.html  todomvc.md  (+7 more)
.github/: FUNDING
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  test.yml
_sources/: faq.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt
_sources/installation/: docker.rst.txt  nix.rst.txt
_sources/introduction/: next-steps.rst.txt  specification-language.rst.txt
_sources/running/: checking.rst.txt
_static/: overrides.css  pygments.css
case-studies/: .gitignore  default.nix  gitlab.strom  measure.py  run.py  shared.py  shell.nix  timer.html  timer.strom  todomvc.nix  todomvc.strom  todomvc_angular2.strom  todomvc_duel.strom  todomvc_vanilla_es6.strom
cli/: .ghci  default.nix  quickstrom-cli.cabal  webcheck-cli.cabal
cli/app/: Main.hs
cli/src/: Main.hs
cli/src/Quickstrom/CLI/: Logging.hs  Reporter.hs  Version.hs
cli/src/Quickstrom/CLI/Reporter/: Console.hs  HTML.hs  JSON.hs
cli/src/Quickstrom/CLI/Reporter/HTML/: index.html  report.css  report.js  report.json  report2.css  report2.js  report2.json  test.html  test2.html
cli/test/Quickstrom/CLI/Reporter/: HTMLTest.hs  JSONTest.hs
client-side/: .gitignore  default.nix  package.json  result  shell.nix  tsconfig.json  yarn.nix
docs/: .envrc  .gitignore  CNAME  Makefile  _config.yml  default.nix  faq.md  index.md  installation.md  introduction.md  requirements.txt  result  running.md  shell.nix  webcheck.html  webcheck.md  webcheck.prof
dsl/: README.md  default.nix  spago.dhall
examples/: AudioPlayer.fix-1.html  AudioPlayer.fix-2.html  AudioPlayer.html  AudioPlayer.spec.purs  RecordPlayer.html  RecordPlayer.spec.purs  audioplayer.strom
html-report/: .gitignore  LICENSE  README.md  default.nix  package.json  result  shell.nix  tsconfig.json  yarn.nix
installation/: docker.html  nix.html
integration-tests/: .envrc  default.nix  run.py  shell.nix
introduction/: example.html  how-it-works.html  next-steps.html  specification-language.html
lib/: WTP.dhall  wtp.js  wtp.ts
nix/: nixpkgs.nix  poetry2nix.nix  specstrom.nix
purescript-webcheck/: .gitignore  README.md  default.nix  shell.nix  spago-packages.nix  spago.dhall
quickstrom/: __main__.py  cli.py  executor.py  hash.py  printer.py  protocol.py  result.py
reference/: example.html  how-it-works.html  next-steps.html  specification-language.html
reports/: dart.txt  todomvs.md  vanilla-es6.txt  vanillajs.txt
runner/: .ghci  default.nix  foreign-todo.md  foreign-todo.txt  quickstrom-runner.cabal  webcheck-runner.cabal
runner/src/Quickstrom/: Action.hs  Browser.hs  Element.hs  LogLevel.hs  Options.hs  Prelude.hs  Pretty.hs  Result.hs  Run.hs  Specification.hs  StreamingVerifier.hs  Timeout.hs  Trace.hs
runner/src/Quickstrom/PureScript/: Analyze.hs  ForeignFunction.hs  Pretty.hs  Program.hs  Value.hs
runner/src/Quickstrom/PureScript/Eval/: Ann.hs  Class.hs  Env.hs  Error.hs  Interpret.hs  Name.hs  WithObservedStates.hs
runner/src/Quickstrom/Run/: Actions.hs  Runner.hs  Scripts.hs  Shrinking.hs
runner/src/Quickstrom/WebDriver/: Class.hs  HsWebDriver.hs  WebDriverW3C.hs
runner/src/WebCheck/: Action.hs  Element.hs  LogLevel.hs  Pretty.hs  Run.hs  Specification.hs  Trace.hs
runner/src/WebCheck/PureScript/: Analyze.hs  Eval.hs  ForeignFunction.hs  Pretty.hs  Program.hs  Value.hs
runner/src/WebCheck/PureScript/Eval/: Class.hs  Env.hs  Error.hs  Interpret.hs
runner/src/WebCheck/Run/: WebDriverClient.hs  WebDriverW3C.hs
runner/src/WebCheck/WebDriver/: Class.hs  HsWebDriver.hs  WebDriverW3C.hs
runner/test/Quickstrom/: Gen.hs  PureScriptTest.hs  PureScriptTest.purs  TraceTest.hs
runner/test/Quickstrom/PureScript/: AnalyzeTest.hs
runner/test/Quickstrom/PureScript/AnalyzeTest/: DependentQueryLocal.purs  DependentQueryTopLevel.purs  FreeVariablesLocal.purs  Valid.purs
runner/test/Quickstrom/PureScriptTest/: TodoMVC.spec.purs
runner/test/Quickstrom/Run/: ShrinkingTest.hs
runner/test/WebCheck/: Gen.hs  PureScriptTest.hs  PureScriptTest.purs  TraceTest.hs
runner/test/WebCheck/PureScript/: AnalyzeTest.hs
runner/test/WebCheck/PureScript/AnalyzeTest/: FreeVariablesLocal.purs  FreeVariablesTopLevel.purs  TopLevelElementState.purs
running/: checking.html  cross-browser.html  troubleshooting.html
specs/: CommentForm.spec.purs  Spinners.spec.purs  TodoMVC.purs  Toggle.spec.purs  integration-tests.nix  run-all.sh
test/: ajax.html  button.html  comment-form.html  double-toggle.html  drafts.html  spinners.html  toggle.html  toggle.spec.purs
tests/: executor_test.py  json_reporter_test.py  strategies.py
topics/: checking.html  cross-browser.html  how-it-works.html  index.html  reporters.html  specification-language.html  trailing-state-changes.html  troubleshooting.html
tutorials/: first.html  index.html
ulib/: quickstrom.strom
web/: .gitignore  default.nix  quickstrom-web.cabal  webcheck-web.cabal
web/api/: default.nix  webcheck-web-api.cabal
web/api/src/: Main.hs
web/frontend/: .gitignore  default.nix  easy-ps.nix  index.js  package-lock.json  package.json  shell.nix  spago-packages.nix  spago.dhall  spago2nix.nix  yarn.nix
web/frontend/src/: App.tsx  HomeView.tsx  Layout.module.css  Layout.tsx  SpecEditorView.tsx
web/frontend/src/WebCheck/Web/: Editor.purs  Main.purs
web/frontend/static/: index.html
web/src/: Main.hs
web/static/: index.html  main.css  normalize.css  specification-editor.css  specification-editor.js
webcheck/: Helpers.hs  Main.hs  TodoMVC.hs
website/: Makefile
wtp/: Helpers.hs  Main.hs  TodoMVC.hs  todomvc.tlwa
(+263 files in other folders)
