[tool.poetry]
name = "quickstrom"
version = "0.5.0"
description = ""
authors = ["owickstrom <oskar@wickstrom.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = { version = "^4.23" }
click = "^7.1.2"
jsonlines = "^2.0.0"
deepdiff = "^5.2.3"
tabulate = "^0.8.9"
pypng = "^0.0.21"

[tool.poetry.dev-dependencies]
hypothesis = "^6"
mypy = "*"
jedi = "*"
rope = "*"
yapf = "*"
toml = "*"
pytest = "*"

[tool.poetry.scripts]
quickstrom = 'quickstrom.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.pyright]
stubPath = "typings"
typeCheckingMode = "basic"
