cabal-version:        2.2

name:                 WebCheck
version:              0.1.0.0
author:               Oskar Wickström
maintainer:           oskar@wickstrom.tech
build-type:           Simple
extra-source-files:   CHANGELOG.md

common shared-deps
  build-depends:      base ^>= 4.12
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , generic-lens
                    , Glob
                    , hashable
                    , http-client
                    , lens
                    , megaparsec
                    , modern-uri
                    , monad-loops
                    , monadlist
                    , mtl
                    , natural-transformation
                    , optparse-applicative
                    , pipes
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , protolude
                    , purescript
                    , process
                    , QuickCheck
                    , random
                    , scientific
                    , text
                    , transformers
                    , unordered-containers
                    , vector
                    , webdriver-w3c
                    , wreq

library
  import:             shared-deps
  exposed-modules:    WebCheck.Action
                    , WebCheck.Element
                    , WebCheck.PureScript.Eval
                    , WebCheck.PureScript.Eval.Ann
                    , WebCheck.PureScript.Eval.Env
                    , WebCheck.PureScript.Eval.Error
                    , WebCheck.PureScript.Eval.Class
                    , WebCheck.PureScript.Eval.Name
                    , WebCheck.PureScript.ForeignFunction
                    , WebCheck.PureScript.Pretty
                    , WebCheck.PureScript.Program
                    , WebCheck.PureScript.Queries
                    , WebCheck.PureScript.Value
                    , WebCheck.Pretty
                    , WebCheck.Result
                    , WebCheck.Run
                    , WebCheck.Specification
                    , WebCheck.Trace
  hs-source-dirs:     lib
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror=incomplete-patterns -Wredundant-constraints

executable webcheck
  import:             shared-deps
  main-is:            Main.hs
  build-depends:      base >= 4.12
                    , WebCheck
  hs-source-dirs:     webcheck
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite webcheck-test
  import:             shared-deps
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:      WebCheck.Gen
                    , WebCheck.PureScriptTest
                    , WebCheck.TraceTest
  build-depends:      base
                    , WebCheck
                    , tasty
                    , tasty-discover
                    , tasty-hspec
                    , tasty-quickcheck
  ghc-options:        -Wall
