cabal-version:        3.0

name:                 wtp
version:              0.1.0.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@ingka.com
build-type:           Simple
extra-source-files:   CHANGELOG.md

common shared-deps
  build-depends:      base ^>= 4.12
                    , aeson
                    , containers
                    , freer-simple
                    , hashable
                    , generic-lens
                    , lattices
                    , lens
                    , mmorph
                    , monad-loops
                    , mtl
                    , natural-transformation
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , QuickCheck
                    , QuickCheck-GenT
                    , random
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , text
                    , transformers
                    , unordered-containers

                    , vector
                    , webdriver-w3c

library
  import:             shared-deps
  exposed-modules:    WTP.Element
                    , WTP.Formula
                    , WTP.Syntax
                    , WTP.Query
                    , WTP.Result
                    , WTP.Run
                    , WTP.Specification
                    , WTP.Trace
                    , WTP.Verify
  hs-source-dirs:     lib
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror=incomplete-patterns -Wredundant-constraints

executable wtp
  import:             shared-deps
  main-is:            Main.hs
  build-depends:      base >= 4.12
                    , dhall
                    , directory
                    , wtp
  hs-source-dirs:     wtp
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite wtp-test
  import:             shared-deps
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:      WTP.Gen
                    , WTP.LogicTest
                    , WTP.SyntaxTest
                    , WTP.VerifyTest
  build-depends:      base
                    , wtp
                    , simple-ltl
                    , tasty
                    , tasty-discover
                    , tasty-hspec
                    , tasty-quickcheck
  ghc-options:        -Wall
