cabal-version:        3.0

name:                 wtp
version:              0.1.0.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@ingka.com
build-type:           Simple
extra-source-files:   CHANGELOG.md

common shared-deps
  build-depends:      base ^>= 4.12
                    , aeson
                    , bytestring
                    , containers
                    , file-embed
                    , generic-lens
                    , hashable
                    , http-client
                    , lattices
                    , lens
                    , mmorph
                    , monad-loops
                    , mtl
                    , natural-transformation
                    , pipes
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , QuickCheck
                    , QuickCheck-GenT
                    , random
                    , scientific
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , template-haskell
                    , text
                    , transformers
                    , unordered-containers
                    , vector
                    , webdriver-w3c
                    , wreq

library
  import:             shared-deps
  exposed-modules:    WTP.Element
                    , WTP.Formula
                    , WTP.Syntax
                    , WTP.Query
                    , WTP.Result
                    , WTP.Run
                    , WTP.Specification
                    , WTP.TH
                    , WTP.Trace
                    , WTP.Verify
  hs-source-dirs:     lib
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror=incomplete-patterns -Wredundant-constraints

executable wtp
  import:             shared-deps
  main-is:            Main.hs
  other-modules:      Helpers
                    , TodoMVC
  build-depends:      base >= 4.12
                    , directory
                    , wtp
  hs-source-dirs:     wtp
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite wtp-test
  import:             shared-deps
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:      WTP.Gen
                    , WTP.LogicTest
                    , WTP.SyntaxTest
                    , WTP.TraceTest
                    , WTP.VerifyTest
  build-depends:      base
                    , wtp
                    , tasty
                    , tasty-discover
                    , tasty-hspec
                    , tasty-quickcheck
  ghc-options:        -Wall
