cabal-version:        3.0

name:                 WebCheck
version:              0.1.0.0
license-file:         LICENSE
author:               Oskar Wickström
maintainer:           oskar.wickstrom@ingka.com
build-type:           Simple
extra-source-files:   CHANGELOG.md

common shared-deps
  build-depends:      base ^>= 4.12
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , file-embed
                    , filepath
                    , generic-lens
                    , Glob
                    , hashable
                    , http-client
                    , lattices
                    , lens
                    , mmorph
                    , monad-loops
                    , mtl
                    , natural-transformation
                    , pipes
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , protolude
                    , purescript
                    , process
                    , QuickCheck
                    , QuickCheck-GenT
                    , random
                    , scientific
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , template-haskell
                    , temporary
                    , text
                    , transformers
                    , unordered-containers
                    , vector
                    , webdriver-w3c
                    , wreq

library
  import:             shared-deps
  exposed-modules:    WebCheck.Element
                    , WebCheck.Formula
                    , WebCheck.PureScript
                    , WebCheck.PureScript.Value
                    , WebCheck.Query
                    , WebCheck.Result
                    , WebCheck.Run
                    , WebCheck.Specification
                    , WebCheck.Syntax
                    , WebCheck.TH
                    , WebCheck.Trace
                    , WebCheck.Value
                    , WebCheck.Verify
  hs-source-dirs:     lib
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror=incomplete-patterns -Wredundant-constraints

executable webcheck
  import:             shared-deps
  main-is:            Main.hs
  build-depends:      base >= 4.12
                    , WebCheck
  hs-source-dirs:     WebCheck
  default-language:   Haskell2010
  ghc-options:        -Wall

test-suite webcheck-test
  import:             shared-deps
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:      WebCheck.Gen
                    , WebCheck.LogicTest
                    , WebCheck.PureScriptTest
                    , WebCheck.SyntaxTest
                    , WebCheck.TraceTest
                    , WebCheck.VerifyTest
  build-depends:      base
                    , WebCheck
                    , tasty
                    , tasty-discover
                    , tasty-hspec
                    , tasty-quickcheck
  ghc-options:        -Wall
