cabal-version:        2.2

name:                 quickstrom-cli
version:              0.1.0.0
author:               Oskar Wickström
maintainer:           oskar@wickstrom.tech
build-type:           Simple
license:              AGPL-3.0-only
copyright:            Oskar Wickström

executable quickstrom
  build-depends:      base ^>= 4.12
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , exceptions
                    , filepath
                    , generic-lens
                    , lens
                    , modern-uri
                    , optparse-applicative
                    , pipes
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , protolude
                    , process
                    , text
                    , time
                    , vector
                    , quickstrom-runner

  main-is:            Main.hs
  other-modules:
                      Quickstrom.CLI.Logging
                    , Quickstrom.CLI.Reporter
                    , Quickstrom.CLI.Reporter.Console
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:        -Wall