cabal-version:        2.2

name:                 webcheck-cli
version:              0.1.0.0
author:               Oskar Wickström
maintainer:           oskar@wickstrom.tech
build-type:           Simple

executable webcheck
  build-depends:      base ^>= 4.12
                    , containers
                    , directory
                    , exceptions
                    , lens
                    , modern-uri
                    , optparse-applicative
                    , pipes
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , protolude
                    , process
                    , text
                    , webcheck-runner

  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:        -Wall