cabal-version:        2.2

name:                 quickstrom-runner
version:              0.1.0.0
author:               Oskar Wickström
maintainer:           oskar@wickstrom.tech
build-type:           Simple
license:              AGPL-3.0-only
copyright:            Oskar Wickström

common shared-deps
  build-depends:      base ^>= 4.12
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , exceptions
                    , generic-lens
                    , Glob
                    , hashable
                    , http-client
                    , lens
                    , lens-aeson
                    , megaparsec
                    , modern-uri
                    , monad-loops
                    , monadlist
                    , mtl
                    , natural-transformation
                    , pipes
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , protolude
                    , purescript
                    , process
                    , QuickCheck
                    , random
                    , scientific
                    , text
                    , transformers
                    , unordered-containers
                    , vector
                    , webdriver
                    , webdriver-w3c
                    , wreq

library
  import:             shared-deps
  exposed-modules:    Quickstrom.Action
                    , Quickstrom.Element
                    , Quickstrom.LogLevel
                    , Quickstrom.Prelude
                    , Quickstrom.Pretty
                    , Quickstrom.PureScript.Eval
                    , Quickstrom.PureScript.Eval.Ann
                    , Quickstrom.PureScript.Eval.Env
                    , Quickstrom.PureScript.Eval.Error
                    , Quickstrom.PureScript.Eval.Class
                    , Quickstrom.PureScript.Eval.Interpret
                    , Quickstrom.PureScript.Eval.Name
                    , Quickstrom.PureScript.Eval.WithObservedStates
                    , Quickstrom.PureScript.Analyze
                    , Quickstrom.PureScript.ForeignFunction
                    , Quickstrom.PureScript.Pretty
                    , Quickstrom.PureScript.Program
                    , Quickstrom.PureScript.Value
                    , Quickstrom.Result
                    , Quickstrom.Run
                    , Quickstrom.Specification
                    , Quickstrom.Trace
                    , Quickstrom.WebDriver.Class
                    , Quickstrom.WebDriver.HsWebDriver
                    , Quickstrom.WebDriver.WebDriverW3C
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:        -Wall -Werror=incomplete-patterns -Wredundant-constraints

test-suite quickstrom-runner-test
  import:             shared-deps
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:      Quickstrom.Gen
                    , Quickstrom.PureScript.AnalyzeTest
                    , Quickstrom.PureScriptTest
                    , Quickstrom.TraceTest
  build-depends:      base
                    , quickstrom-runner
                    , tasty
                    , tasty-discover
                    , tasty-hspec
                    , tasty-quickcheck
  default-extensions: NoImplicitPrelude
  ghc-options:        -Wall
