cabal-version:        2.2

name:                 webcheck-runner
version:              0.1.0.0
author:               Oskar Wickström
maintainer:           oskar@wickstrom.tech
build-type:           Simple
extra-source-files:   CHANGELOG.md

common shared-deps
  build-depends:      base ^>= 4.12
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , generic-lens
                    , Glob
                    , hashable
                    , http-client
                    , lens
                    , megaparsec
                    , modern-uri
                    , monad-loops
                    , monadlist
                    , mtl
                    , natural-transformation
                    , pipes
                    , prettyprinter
                    , prettyprinter-ansi-terminal
                    , protolude
                    , purescript
                    , process
                    , QuickCheck
                    , random
                    , scientific
                    , text
                    , transformers
                    , unordered-containers
                    , vector
                    , webdriver-w3c
                    , wreq

library
  import:             shared-deps
  exposed-modules:    WebCheck.Action
                    , WebCheck.Element
                    , WebCheck.LogLevel
                    , WebCheck.Prelude
                    , WebCheck.Pretty
                    , WebCheck.PureScript.Eval
                    , WebCheck.PureScript.Eval.Ann
                    , WebCheck.PureScript.Eval.Env
                    , WebCheck.PureScript.Eval.Error
                    , WebCheck.PureScript.Eval.Class
                    , WebCheck.PureScript.Eval.Interpret
                    , WebCheck.PureScript.Eval.Name
                    , WebCheck.PureScript.Eval.WithObservedStates
                    , WebCheck.PureScript.Analyze
                    , WebCheck.PureScript.ForeignFunction
                    , WebCheck.PureScript.Pretty
                    , WebCheck.PureScript.Program
                    , WebCheck.PureScript.Value
                    , WebCheck.Result
                    , WebCheck.Run
                    , WebCheck.Specification
                    , WebCheck.Trace
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:        -Wall -Werror=incomplete-patterns -Wredundant-constraints

test-suite webcheck-runner-test
  import:             shared-deps
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:      WebCheck.Gen
                    , WebCheck.PureScript.AnalyzeTest
                    , WebCheck.PureScriptTest
                    , WebCheck.TraceTest
  build-depends:      base
                    , webcheck-runner
                    , tasty
                    , tasty-discover
                    , tasty-hspec
                    , tasty-quickcheck
  default-extensions: NoImplicitPrelude
  ghc-options:        -Wall
